--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
 </title>
 <style>
 </style>
-
+#insertion_box
+{
+  padding: 5px;
+  contenteditable: true;
+}
 </head>
 <body>
-<div>
+<div id="insertion_box">
 </div>
 </body>
-<script
+<script>
 
 </script>
 </html>
