--- a/index.html
+++ b/index.html
@@ -8,14 +8,28 @@
 #insertion_box
 {
   padding: 5px;
-  contenteditable: true;
 }
 </head>
 <body>
-<div id="insertion_box">
+<div contenteditable="true" id="insertion_box">
 </div>
+<button id="SubmitButton" onclick="ConvertTxt(this)">
+</button>
 </body>
 <script>
-
+function ConvertTxt(el)
+{
+  const TxtEl= document.getElementById("insertion_box");
+  let Link = TxtEl.innerHTML;
+  console.log(Link);
+  let regex = /\?[A-Za-z0-9]+=[A-Za-z0-9]+&v=[A-Za-z0-9]+&s=[A-Za-z0-9]+/i;
+  link.replace(regex, '');
+  console.log(Link);
+  link.replace("preview", 'i');
+  console.log(Link);
+  //link format = preview.redd.it/l1pqfp7bw4xa1.gif?format=mp4&v=enabled&s=b250551c08f8780810e4a58a1c7688f3b0c795b6
+  //grab everything before the ?: "[A-Za-z]+://([A-Za-z]+(\.[A-Za-z]+)+)/([A-Za-z0-9]+(\.[A-Za-z0-9]+)+)\"
+  TxtEl.innerHTML = Link;
+}
 </script>
 </html>
