--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 function ConvertTxt(el)
 {
   const TxtEl= document.getElementById("insertion_box");
-  let Link = TxtEl.innerHTML;
-  console.log(Link);
-  let regex = /\?[A-Za-z0-9]+=[A-Za-z0-9]+&v=[A-Za-z0-9]+&s=[A-Za-z0-9]+/i;
-  Link.replace(regex, '');
-  console.log(Link);
+  var Link = TxtEl.innerHTML;
+  console.log("link: "+Link);
+  let regex = /\?format=/i;
+  let pos = Link.indexOf(regex);
+  Link = Link.slice(0,pos);
+  console.log("removed end: "+Link);
   Link.replace("preview", 'i');
-  console.log(Link);
+  console.log("final link: "+Link);
   //link format = preview.redd.it/l1pqfp7bw4xa1.gif?format=mp4&v=enabled&s=b250551c08f8780810e4a58a1c7688f3b0c795b6
   //grab everything before the ?: "[A-Za-z]+://([A-Za-z]+(\.[A-Za-z]+)+)/([A-Za-z0-9]+(\.[A-Za-z0-9]+)+)\"
   TxtEl.innerHTML = Link;
